@@ -1,9 +1,10 @@
 package us.dot.its.jpo.ode.api.accessors;
 
 import org.bson.Document;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.mongodb.core.MongoTemplate;
@@ -15,11 +16,15 @@ import us.dot.its.jpo.ode.api.models.AggregationResult;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 public interface PageableQuery {
+
+    Logger logger = LoggerFactory.getLogger(PageableQuery.class);
+
     /**
      * Find paginated data based on the given criteria and pageable object
      *
@@ -29,6 +34,7 @@ public interface PageableQuery {
      * @param pageable       the pageable object to use for pagination
      * @param criteria       the criteria object to use for querying
      * @param sort           the sort object to use for sorting
+     * @param outputType     the class type of the output
      * @return the paginated data that matches the given criteria
      */
     default <T> Page<T> findPage(
@@ -36,34 +42,28 @@ public interface PageableQuery {
             @Nonnull String collectionName,
             @Nonnull Pageable pageable,
             @Nonnull Criteria criteria,
-            @Nonnull Sort sort) {
-        MatchOperation matchOperation = Aggregation.match(criteria);
-        SortOperation sortOperation = Aggregation.sort(sort);
-        AggregationOperation facetOperation = context -> new Document("$facet",
-                new Document("metadata", List.of(new Document("$count", "count")))
-                        .append("results",
-                                Arrays.asList(
-                                        new Document("$skip", pageable.getPageNumber() * pageable.getPageSize()),
-                                        new Document("$limit", pageable.getPageSize()))));
+            @Nonnull Sort sort,
+            @Nullable List<String> excludedFields,
+            @Nonnull Class<T> outputType) {
+        List<String> fieldsToExclude = excludedFields != null ? excludedFields : Collections.emptyList();
 
-        Aggregation aggregation = Aggregation.newAggregation(matchOperation, sortOperation, facetOperation);
-
-        // Execute the aggregation
-        @SuppressWarnings("rawtypes")
-        AggregationResults<AggregationResult> results = mongoTemplate
-                .aggregate(aggregation, collectionName, AggregationResult.class);
-
-        // Extract the results
-        @SuppressWarnings("unchecked")
-        AggregationResult<T> result = results.getUniqueMappedResult();
-        if (result == null) {
+        AggregationResult aggregationResult = getAggregationResult(mongoTemplate, collectionName, pageable, criteria,
+                sort, fieldsToExclude);
+        if (aggregationResult == null || aggregationResult.getMetadata().isEmpty()) {
             return new PageImpl<>(Collections.emptyList(), pageable, 0);
         }
 
-        List<T> data = result.getResults();
-        long totalElements = result.getCounts().getFirst();
+        List<T> results = aggregationResult.getResults().stream().map(doc -> {
+            T convertedResult = mongoTemplate.getConverter().read(outputType, doc);
+            if (convertedResult != null) {
+                return convertedResult;
+            } else {
+                logger.error("Failed to convert document to type {}: {}", outputType.getName(), doc);
+                return null;
+            }
+        }).filter(result -> result != null).toList();
 
-        return new PageImpl<>(data, pageable, totalElements);
+        return new PageImpl<>(results, pageable, aggregationResult.getMetadata().getFirst().getCount());
     }
 
     /**
@@ -74,16 +74,56 @@ public interface PageableQuery {
      * @param pageable       the pageable object to use for pagination
      * @param criteria       the criteria object to use for querying
      * @param sort           the sort object to use for sorting
-     * @return the paginated data (type Document) that matches the given criteria
+     * @return the paginated data that matches the given criteria
      */
-    default Page<Document> findPageAsBson(
+    default Page<Document> findDocumentsWithPagination(
             @Nonnull MongoTemplate mongoTemplate,
             @Nonnull String collectionName,
             @Nonnull Pageable pageable,
             @Nonnull Criteria criteria,
-            @Nonnull Sort sort) {
+            @Nonnull Sort sort,
+            @Nullable List<String> excludedFields) {
+        List<String> fieldsToExclude = excludedFields != null ? excludedFields : Collections.emptyList();
+
+        AggregationResult result = getAggregationResult(mongoTemplate, collectionName, pageable, criteria, sort,
+                fieldsToExclude);
+        if (result == null || result.getMetadata().isEmpty()) {
+            return new PageImpl<>(Collections.emptyList(), pageable, 0);
+        }
+
+        List<Document> data = result.getResults();
+        long totalElements = result.getMetadata().getFirst().getCount();
+
+        return new PageImpl<>(data, pageable, totalElements);
+    }
+
+    /**
+     * Wrap the given object in a page object. Intended to be used when applying a
+     * limit of 1 to a query, while attempting to return a Paged response
+     *
+     * @param <T>    the type of the object to wrap
+     * @param latest the object to wrap
+     * @return a page object containing the given object
+     */
+    default <T> Page<T> wrapSingleResultWithPage(T latest) {
+        List<T> resultList = new ArrayList<>();
+        if (latest != null) {
+            resultList.add(latest);
+        }
+        return new PageImpl<>(resultList);
+    }
+
+    private static AggregationResult getAggregationResult(@Nonnull MongoTemplate mongoTemplate,
+            @Nonnull String collectionName,
+            @Nonnull Pageable pageable,
+            @Nonnull Criteria criteria,
+            @Nonnull Sort sort,
+            @Nonnull List<String> excludedFields) {
+
         MatchOperation matchOperation = Aggregation.match(criteria);
         SortOperation sortOperation = Aggregation.sort(sort);
+
+        // Create a facet operation that gets both results and count in one query
         AggregationOperation facetOperation = context -> new Document("$facet",
                 new Document("metadata", List.of(new Document("$count", "count")))
                         .append("results",
@@ -91,44 +131,32 @@ public interface PageableQuery {
                                         new Document("$skip", pageable.getPageNumber() * pageable.getPageSize()),
                                         new Document("$limit", pageable.getPageSize()))));
 
-        Aggregation aggregation = Aggregation.newAggregation(matchOperation, sortOperation, facetOperation);
-
-        // Execute the aggregation and return raw BSON documents
-        AggregationResults<Document> results = mongoTemplate.aggregate(aggregation, collectionName, Document.class);
-
-        // Extract the results
-        List<Document> documents = results.getMappedResults();
-        long totalElements = documents.size(); // Adjust this based on your metadata if needed
-
-        return new PageImpl<>(documents, pageable, totalElements);
-    }
-
-    /**
-     * Wrap the given object in a page object. Intended to be used when applying a
-     * limit of 1 to a query, while attempting to return a Paged response
-     * 
-     * @param <T>    the type of the object to wrap
-     * @param latest the object to wrap
-     * @return a page object containing the given object
-     */
-    default <T> Page<T> wrapSingleResultWithPage(T latest) {
-        return new PageImpl<>(Collections.singletonList(latest));
-    }
-
-    /**
-     * Create a pageable object based on the given page and size. If size is null,
-     * return null.
-     * 
-     * @param page the page number to use, nullable
-     * @param size the size of the page to use, nullable. If null, no pageable
-     *             object is returned
-     * @return a pageable object based on the given page and size, or null if either
-     *         is null
-     */
-    default Pageable createNullablePage(@Nullable Integer page, @Nullable Integer size) {
-        if (size == null) {
-            return null;
+        // Add project operation if we need to exclude fields
+        Aggregation aggregation;
+        if (!excludedFields.isEmpty()) {
+            AggregationOperation projectOperation = context -> {
+                Document projectFields = new Document();
+                for (String field : excludedFields) {
+                    projectFields.append(field, 0); // Exclude the field by setting it to 0
+                }
+                return new Document("$project", projectFields);
+            };
+            aggregation = Aggregation.newAggregation(
+                    matchOperation,
+                    sortOperation,
+                    projectOperation,
+                    facetOperation);
+        } else {
+            aggregation = Aggregation.newAggregation(
+                    matchOperation,
+                    sortOperation,
+                    facetOperation);
         }
-        return PageRequest.of(page == null ? 0 : page, size);
+
+        // Execute the aggregation
+        AggregationResults<AggregationResult> results = mongoTemplate
+                .aggregate(aggregation, collectionName, AggregationResult.class);
+
+        return results.getUniqueMappedResult();
     }
 }
